[package]
authors = ["JN.X <xyanyue@gmail.com>"]
description = "Randomly generating potentially false UserAgent,used by spider<Initial version>"
edition = "2021"
license = "BSD-3-Clause"
name = "rand_user_agent"
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
regex = "1"
