[package]
authors = ["JN.X <xyanyue@gmail.com>"]
description = "Randomly generating potentially false UserAgent,used by spider<Initial version>"
documentation = "https://docs.rs/rand_user_agent"
edition = "2021"
keywords = ["agent", "random", "useragent", "user_agent", "rand"]
license = "BSD-3-Clause"
name = "rand_user_agent"
readme = "README.md"
repository = "https://github.com/xyanyue/rand_user_agent.git"
version = "0.0.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
regex = "1"
